feat: 'Posts' service HTTP handlers, gRPC handlers, CQRS
